pyfaf_cache_PYTHON = \
	__init__.py \
	helpers.py \
	abrt_report_check.py \
	debuginfo_report.py \
	debuginfo_sources.py \
	fedora_pkgdb_collection.py \
	fedora_pkgdb_package.py \
	koji_build.py \
	koji_build_funfin_report.py \
	koji_rpm.py \
	koji_tag.py \
	rhbz_action.py \
	rhbz_attachment.py \
	rhbz_bug.py \
	rhbz_bug_btserver_report.py \
	rhbz_comment.py \
	rhbz_cluster.py \
	rhbz_user.py
pyfaf_cachedir = $(pythondir)/pyfaf/cache
