SUBDIRS = \
    actions \
    bugtrackers \
    celery_tasks \
    opsys \
    problemtypes \
    repos \
    solutionfinders \
    storage \
    utils

pyfaf_PYTHON = \
    __init__.py \
    checker.py \
    cmdline.py \
    common.py \
    config.py \
    local.py \
    retrace.py \
    faf_rpm.py \
    queries.py \
    ureport.py \
    ureport_compat.py

pyfafdir = $(pythondir)/pyfaf

EXTRA_DIST = $(pyfaf_PYTHON)
