EXTRA_DIST = bugzilla_attachment comment_attachment contact_email_attachment \
             url_attachment \
             tainted_kernel ureport1 ureport2 ureport_f20 low_quality1 \
             ureport_core ureport_core1 ureport_core_invalid \
             ureport_java ureport_kerneloops ureport_kerneloops2 \
             ureport_python ureport_ruby \
             ureport_systemd2 ureport_systemd77 ureport_kerneloops_nouveau \
             ureport_duplicate ureport_duplicate2 ureport_duplicate3 \
             ureport_duplicate4 ureport_solution ureport_solution_99
