commands_PYTHON = __init__.py \
                  cmd_create_problems.py \
                  cmd_demo_command.py \
                  cmd_generate_optimized_backtraces.py \
                  cmd_generate_reports_bugzilla.py \
                  cmd_llvm_build.py \
                  cmd_pull_bugs.py \
                  cmd_pull_builds.py \
                  cmd_pull_tags.py \
                  cmd_save_reports.py

commandsdir = $(pythondir)/pyfaf/client/commands
