workertask_PYTHON = __init__.py \
                    task_create_problems.py \
                    task_generate_optimized_backtraces.py \
                    task_generate_reports_bugzilla.py \
                    task_demo_task.py \
                    task_llvm_build.py \
                    task_pull_bugs.py \
                    task_pull_builds.py \
                    task_pull_tags.py \
                    task_save_reports.py

workertaskdir = $(pythondir)/pyfaf/worker/tasks
