actions_PYTHON = \
    __init__.py \
    archadd.py \
    archive_reports.py \
    archlist.py \
    bugtrackerlist.py \
    pull_abrt_bugs.py \
    pull_bug.py \
    update_bugs.py \
    c2p.py \
    create_problems.py \
    extfafadd.py \
    extfafclonebz.py \
    extfafdelete.py \
    extfaflink.py \
    extfafmodify.py \
    extfafshow.py \
    find_components.py \
    find_crash_function.py \
    init.py \
    kbsoladd.py \
    kbsolshow.py \
    kbpatadd.py \
    kbpatshow.py \
    pull_associates.py \
    pull_components.py \
    pull_releases.py \
    pull_reports.py \
    releaselist.py \
    repoadd.py \
    repoassign.py \
    repodel.py \
    repoimport.py \
    repoinfo.py \
    repolist.py \
    repomod.py \
    reposync.py \
    retrace.py \
    save_reports.py \
    shell.py \
    opsysadd.py \
    opsysdel.py \
    opsyslist.py

actionsdir = $(pythondir)/pyfaf/actions
