actions_PYTHON = \
    __init__.py \
    addcompathashes.py \
    archadd.py \
    archive_reports.py \
    archlist.py \
    bugtrackerlist.py \
    pull_abrt_bugs.py \
    pull_bug.py \
    update_bugs.py \
    c2p.py \
    componentadd.py \
    create_problems.py \
    extfafadd.py \
    extfafclonebz.py \
    extfafdelete.py \
    extfaflink.py \
    extfafmodify.py \
    extfafshow.py \
    find_components.py \
    find_crash_function.py \
    init.py \
    mark_probably_fixed.py \
    pull_associates.py \
    pull_components.py \
    pull_releases.py \
    pull_reports.py \
    releaseadd.py \
    releaselist.py \
    releasemod.py \
    repoadd.py \
    repoassign.py \
    repodel.py \
    repoimport.py \
    repoinfo.py \
    repolist.py \
    repomod.py \
    reposync.py \
    retrace.py \
    save_reports.py \
    sf_prefilter_soladd.py \
    sf_prefilter_solshow.py \
    sf_prefilter_patadd.py \
    sf_prefilter_patshow.py \
    shell.py \
    stats.py \
    opsysadd.py \
    opsysdel.py \
    opsyslist.py \
    match_unknown_packages.py

actionsdir = $(pythondir)/pyfaf/actions
