SUBDIRS = \
    fixtures \
    migrations

storage_PYTHON = \
    __init__.py \
    bugzilla.py \
    bugtracker.py \
    debug.py \
    events.py \
    externalfaf.py \
    llvm.py \
    opsys.py \
    problem.py \
    project.py \
    report.py \
    sf_prefilter.py \
    symbol.py \
    user.py

storagedir = $(pythondir)/pyfaf/storage
