SUBDIRS = \
    fixtures \
    migrations

storage_PYTHON = \
    __init__.py \
    bugzilla.py \
    bugtracker.py \
    custom_types.py \
    debug.py \
    events.py \
    events_fedmsg.py \
    externalfaf.py \
    jsontype.py \
    llvm.py \
    opsys.py \
    mantisbt.py \
    problem.py \
    project.py \
    report.py \
    sf_prefilter.py \
    symbol.py \
    task.py \
    user.py

storagedir = $(pythondir)/pyfaf/storage
