fafcss_DATA = style.css
fafcssdir = $(datadir)/faf/web/static/faf/css

fafjs_DATA = dumpdirs.js \
             form.js \
             jquery.flot.simplelabel.js \
             metrics.js \
             problem.js \
             report_graph.js

fafjsdir = $(datadir)/faf/web/static/faf/js

EXTRA_DIST = $(fafcss_DATA) $(fafjs_DATA)
