reports_DATA = \
	index.html \
	item.html \
	invalid.html \
	invalid_item.html \
	list.html \
	new.html \
	success.html \
	history_table.html \
	history_graph.html \
	packages.html \
	backtrace.html \
	attach.html \
	attach_success.html \
	diff.html \
	backtrace_table_columns.html \
	waitforit.html

reportsdir = $(pythondir)/pyfaf/hub/templates/reports

EXTRA_DIST = $(reports_DATA)
