fixture_sql_DATA = \
	archs.sql \
	archstags.sql \
	buildarchs.sql \
	builds.sql \
	buildstags.sql \
	buildsys.sql \
	opsys.sql \
	opsyscomponents.sql \
	opsysreleases.sql \
	opsysreleasescomponents.sql \
	packages.sql \
	taginheritances.sql \
	tags.sql

fixture_sqldir = $(datadir)/faf/fixtures/sql/

EXTRA_DIST = $(fixture_sql_DATA)
