font_DATA = \
  glyphicons-halflings-regular.eot \
  glyphicons-halflings-regular.svg \
  glyphicons-halflings-regular.ttf \
  glyphicons-halflings-regular.woff \
  OpenSans-BoldItalic-webfont.eot \
  OpenSans-BoldItalic-webfont.svg \
  OpenSans-BoldItalic-webfont.ttf \
  OpenSans-BoldItalic-webfont.woff \
  OpenSans-Bold-webfont.eot \
  OpenSans-Bold-webfont.svg \
  OpenSans-Bold-webfont.ttf \
  OpenSans-Bold-webfont.woff \
  OpenSans-ExtraBoldItalic-webfont.eot \
  OpenSans-ExtraBoldItalic-webfont.svg \
  OpenSans-ExtraBoldItalic-webfont.ttf \
  OpenSans-ExtraBoldItalic-webfont.woff \
  OpenSans-ExtraBold-webfont.eot \
  OpenSans-ExtraBold-webfont.svg \
  OpenSans-ExtraBold-webfont.ttf \
  OpenSans-ExtraBold-webfont.woff \
  OpenSans-Italic-webfont.eot \
  OpenSans-Italic-webfont.svg \
  OpenSans-Italic-webfont.ttf \
  OpenSans-Italic-webfont.woff \
  OpenSans-LightItalic-webfont.eot \
  OpenSans-LightItalic-webfont.svg \
  OpenSans-LightItalic-webfont.ttf \
  OpenSans-LightItalic-webfont.woff \
  OpenSans-Light-webfont.eot \
  OpenSans-Light-webfont.svg \
  OpenSans-Light-webfont.ttf \
  OpenSans-Light-webfont.woff \
  OpenSans-Regular-webfont.eot \
  OpenSans-Regular-webfont.svg \
  OpenSans-Regular-webfont.ttf \
  OpenSans-Regular-webfont.woff \
  OpenSans-SemiboldItalic-webfont.eot \
  OpenSans-SemiboldItalic-webfont.svg \
  OpenSans-SemiboldItalic-webfont.ttf \
  OpenSans-SemiboldItalic-webfont.woff \
  OpenSans-Semibold-webfont.eot \
  OpenSans-Semibold-webfont.svg \
  OpenSans-Semibold-webfont.ttf \
  OpenSans-Semibold-webfont.woff \
  PatternFlyIcons-webfont.eot \
  PatternFlyIcons-webfont.svg \
  PatternFlyIcons-webfont.ttf \
  PatternFlyIcons-webfont.woff \
  FontAwesome.otf \
  fontawesome-webfont.eot \
  fontawesome-webfont.svg \
  fontawesome-webfont.ttf \
  fontawesome-webfont.woff


fontdir = $(datadir)/faf/web/static/fonts/

EXTRA_DIST = $(font_DATA)
