js_DATA = \
  bootstrap.js \
  bootstrap-multiselect.js \
  bootstrap-tagsinput.js \
  color.js \
  custom.js \
  daterangepicker.js \
  jquery.flot.axislabels.js \
  jquery.flot.js \
  jquery.flot.pie.js \
  jquery.flot.resize.js \
  jquery.flot.simplelabel.js \
  jquery.flot.stack.js \
  jquery.flot.symbol.js \
  jquery.flot.time.js \
  moment.js \
  typeahead.bundle.min.js

jsdir = $(datadir)/faf/web/static/js/

EXTRA_DIST = $(js_DATA)
