js_DATA = \
  bootstrap-multiselect.js \
  custom.js \
  daterangepicker.js \
  jquery.flot.axislabels.js \
  jquery.flot.js \
  jquery.flot.pie.js \
  jquery.flot.resize.js \
  jquery.flot.simplelabel.js \
  jquery.flot.symbol.js \
  jquery.flot.time.js \
  moment.min.js \
  report_graph.js

jsdir = $(datadir)/faf/web2/static/js/

EXTRA_DIST = $(js_DATA)
