versions_PYTHON = \
    1c4d6317721a_support_mirrors.py \
    133991a89da4_build_to_opsysrelease.py \
    168c63b81f85_report_history_default_value.py \
    17d4911132f8_assigning_release_to_repo.py \
    183a15e52a4f_report_history_unique.py \
    1b264b21ca91_add_semrel_to_build.py \
    1c7edfbf8941_drop_reportunknownpackage_running_fields.py \
    21345f007bdf_add_privileged_user_field.py \
    23bab42e7be7_initial_migration.py \
    272e6a3deea4_link_probable_fix_to_build.py \
    2dfd5aef57ca_add_eol_bz_resolution.py \
    2e5f6d8b68f5_add_contact_email_tables.py \
    31d0249e8d4c_create_users_table.py \
    43bd2d59838e_add_mantisbt.py \
    47cf82727ed1_acl_permissions.py \
    48550f308625_add_symbolsource_retrace_fail_count.py \
    4ff13674a015_add_semver_to_build.py \
    50d3e87e4b2a_add_reporturl.py \
    5695a1c595c3_reportreleasedesktops.py \
    13557f1962e6_ureport_added_certainty.py \
    58f44afc3a3a_drop_running_package_from_reportpackages.py \
    71905f91e7b7_add_archived_reports.py \
    7fa8b3134f0_probable_fix_by_opsy.py \
    82081a3c76b_rename_kb_to_sf_prefilter.py \
    cef2fcd69ef_celery_tasks.py \
    89d35a57f82b_add_new_value_to_repo_types_enum.py \
    9301a426f19d_associates_to_opsys.py \
    acd3d9bf85d1_ignore_private_bz.py \
    f43edd5b636d_enable_problem_components_reassign.py


versionsdir = $(pythondir)/pyfaf/storage/migrations/versions
